--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Ninja</h1>
-    <img src="ghttps://s3.amazonaws.com/General_V88/boomyeah2015/codingdojo/curriculum/content/chapter/pronunciation.png" alt="Ninja">
+    <img src="pronunciation.png" alt="ninja pronuciation">
     <p><em>noun</em></p>
     <ol>
         <li>A practioner skilled in the Japanese art of ninjutsu</li>
