--- a/index.html
+++ b/index.html
@@ -1,20 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Ninja</h1>
-    <img src="pronunciation.png" alt="ninja pronuciation">
-    <p><em>noun</em></p>
-    <ol>
-        <li>A practioner skilled in the Japanese art of ninjutsu</li>
-        <li>A programmer who breaks down problems with zen-like focus</li>
-    </ol>
+<html>
+    <head>
+        <title>
+            Basic I
+        </title>
+    </head>
+    <body>
+        <h1>
+            What language do you love?
+        </h1>
+        <p>
+            I love HTML!
+        </p>
+    </body>
+</html>
 
-
-</body>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Basic II</title>
+    </head>
+    <body>
+        <table> 
+            <thead>
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Email</th>
+                    <th>Password</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Brendan</td>
+                    <td>Stanton</td>
+                    <td>brendanrocks@gmail.com</td>
+                    <td> FakePassword123</td>
+                </tr>
+            </tbody>
+        </table>
+        <h1>Here is a list of my favorite things:</h1>
+        <ul>
+            <li>Food</li>
+            <li>Bandwidth</li>
+            <li>Coffee</li>
+            <li>Beach</li>
+        </ul>
+    </body>
 </html>
